spacing issues on home page

--- a/_scss/1-base/base.scss
+++ b/_scss/1-base/base.scss
@@ -33,7 +33,7 @@ button{
   background-image: url("../images/cartographer.png");
   background-repeat:repeat;
   min-height: 100vh;
-  padding-bottom: 60px;
+  padding-bottom: 100px;
 }
 .pageContainer{
   max-width: 1200px;
