--- a/_scss/2-modules/home.scss
+++ b/_scss/2-modules/home.scss
@@ -136,6 +136,7 @@
   color: #333;
   font-size: 12px;
   opacity: .4;
+  line-height: 2;
 }
 
 
@@ -143,7 +144,7 @@
 
 // RESPONSIVE
 
-@media (max-width: 720px) {
+@media (max-width: 990px) {
 
   .name{
     font-size: 72px;
